# goofy

./: .gitignore  Makefile.am  README.md  configure.ac
src/: .gitignore  Makefile  Makefile.am  client.cpp  client.h  error.h  main.cc  main.cpp  map_parser.cc  map_parser.cpp  map_parser.h  server.cpp  server.h  session.cc  session.cpp  session.h  settings.cc  settings.cpp  settings.h  term-write.h
src/buffers/: lines.cpp  lines.h
src/gopher/: map.cc  map.cpp  map.h  node-dirlist.cpp  node-dirlist.h  node-fsys.cc  node-fsys.cpp  node-fsys.h  node-gophermap.cc  node-gophermap.cpp  node-gophermap.h  node-menu.cc  node-menu.cpp  node-menu.h  node-redirect.cc  node-redirect.cpp  node-redirect.h  node-term-write.h  node-types.cpp  node-types.h  node.cc  node.cpp  node.h  proto.cpp  proto.h  request.cc  request.cpp  request.h
src/parse/: ip.cpp  ip.h
src/util/: fileread.cc  fileread.cpp  fileread.h  str.cc  str.cpp  str.h  typeguesser.cpp  typeguesser.h
tests/: .gitignore  Makefile.am  test-settings.cc  test-str.cc
