AUTOMAKE_OPTIONS = subdir-objects
bin_PROGRAMS = goofyd

goofyd_SOURCES =\
	./session.cc\
	./settings.cc\
	./gopher/node-fsys.cc\
	./gopher/node-redirect.cc\
	./gopher/map.cc\
	./gopher/node-menu.cc\
	./gopher/node-gophermap.cc\
	./gopher/node.cc\
	./gopher/node-types.cc\
	./gopher/proto.cc\
	./gopher/request.cc\
	./map_parser.cc\
	./util/str.cc\
	./util/typeguesser.cc\
	./util/fileread.cc\
	./main.cc
